<resources>
    <string name="app_name">MediaLibraryTask</string>
    <string name="login_subtitle">Your work faster and structured with Todo</string>
    <string name="login_title">Get Started now</string>
    <string name="login_txt_email">Email</string>
    <string name="login_edit_email">Enter your Email</string>
    <string name="login_txt_password">Password</string>
    <string name="login_edit_password">Enter your password</string>
    <string name="login_edit_confirm_password">Enter your confirm password</string>
    <string name="login_btn_signIn">LogIn</string>
    <string name="register_title">Create account</string>
    <string name="register_subtitle">Create your account and feel the benefits</string>
    <string name="register_txt_confirm_password">Confirm password</string>
    <string name="register_btn_signup">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grid_icon">Grid icon</string>
    <string name="see_all">See all</string>
    <string name="folders">Folders</string>
</resources>