<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".allFolder.AllFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="80dp">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folders"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/light_black"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"/>

        </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_gravity="end"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/img_settings"
                    android:layout_width="44dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_sort"
                    android:contentDescription="@string/grid_icon"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="11dp"/>

                <TextView
                    android:id="@+id/txt_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"/>
            </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/folderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/folderRecyclerView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recent"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/light_black"
            android:layout_marginStart="15dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_gravity="end"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentMediaRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="bottom|end"
        android:background="@color/folder_card_bgColor"
        android:src="@drawable/ic_add_icon"/>

    <LinearLayout
        android:id="@+id/addOptionsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_margin="20dp"
        android:layout_gravity="bottom|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/createFolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_custom_option_layout_circle"
            android:src="@drawable/ic_add_new_folder_icon"
            android:contentDescription="Create Folder" />

        <ImageButton
            android:id="@+id/upload_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_custom_option_layout_circle"
            android:src="@drawable/ic_add_new_image_icon"
            android:contentDescription="Add Image" />
        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_icon"
            android:backgroundTint="@color/close_button_bg"
            android:background="@drawable/dialog_custom_option_layout_circle"
            android:contentDescription="Close" />
    </LinearLayout>
</FrameLayout>